[package]
name = "blog_os"
authors = ["Aldo A. Avalos <99375833+aldorithms@users.noreply.github.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.11.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
